--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ img {
     margin-right: auto;
     border: 10px solid #fff;
     border-radius: 4px;
-    padding: 5px;
+    /*padding: 5px;*/
     object-fit: contain;
 }
 
