--- a/style.css
+++ b/style.css
@@ -79,9 +79,9 @@ div.mandelbulb {
     /*margin-left: 5%;
     margin-right: 5%;*/
     margin: 5%;
-    padding: 5%;
+    padding: 2%;
     background-color: #fff;
-    opacity: 50%;
+    /*opacity: 50%;*/
     /*border: 10px solid #fff;*/
     color: #2F0841;;
 }
