--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ div.intro {
     font-size: 120%;
     margin-left: 5%;
     margin-right: 5%;
+    padding: 2%;
     background-color: #fff;
     color: #2F0841;
 }
