--- a/style.css
+++ b/style.css
@@ -19,13 +19,13 @@ h1 {
     font-size: 230%;
     text-align: center;
     text-transform: uppercase;
-    color: #FFF;
+    color: #2F0841;
 }
 
 h2 {
     padding: 0%;
     font-size: 150%;
-    color: #ffffff;
+    color: #2F0841;
     text-transform: uppercase;
     /*adding-top: 2%;*/
     padding-bottom: 4%;
