--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h2 {
     color: #2F0841;
     text-transform: uppercase;
     /*adding-top: 2%;*/
-    padding-bottom: 4%;
+    padding-bottom: 2%;
 }
 
 p {
@@ -73,6 +73,7 @@ div.intro {
     font-size: 120%;
     margin-left: 2%;
     margin-right: 2%;
+    margin-bottom: 2%;
     padding: 2%;
     background-color: #fff;
     color: #2F0841;
