--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@ img {
     display: none;
 }
 
+div.flex {
+    flex-direction: column;
+}
 
 div.intro {
     font-size: 120%;
@@ -185,7 +188,7 @@ the links and position the close button again, so they don't overlap */
         border: 4px solid #30a0fc;
     }
 
-    .flex-container {
+    .div#myDIV1 {
         flex-direction: row;
     }
 
@@ -214,7 +217,7 @@ This class makes the topnav look good on small screens (display the links vertic
 }
 
 @media only screen and (min-width: 780px) {
-    .flex-container {
+    .div#myDIV1 {
         flex-direction: column;
     }
 }
