--- a/style.css
+++ b/style.css
@@ -151,13 +151,24 @@ the links and position the close button again, so they don't overlap */
     h2 {
         font-size: 100%;
     }
+    .div#myDIV1 {
+        flex-direction: column;
+    }
+    .div#myDIV2 {
+        flex-direction: column;
+    }
 }
 
 @media screen and (min-width: 600px) {
+    .div#myDIV1 {
+        flex-direction: row;
+    }
+    .div#myDIV2 {
+        flex-direction: row;
+    }
     #ham {
         display: none;
     }
-
 
     .topNav {
         width: 100%;
@@ -182,7 +193,7 @@ the links and position the close button again, so they don't overlap */
     }
 
     .topNav a:active {
-        color: #60fbff !important;
+        /*color: #60fbff !important;
         border: 4px solid #60fbff;
     }
 
@@ -191,11 +202,8 @@ the links and position the close button again, so they don't overlap */
         border: 4px solid #30a0fc;
     }
 
-    .div#myDIV1 {
-        flex-direction: row;
-    }
-
-}
+  
+}*/
 
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home").
