--- a/style.css
+++ b/style.css
@@ -42,7 +42,9 @@ img {
     border: 10px solid #fff;
     border-radius: 4px;
     /*padding: 5px;*/
-    object-fit: contain;
+    object-fit: cover;
+    max-width: 80%;
+    
 }
 
 #home {
@@ -84,16 +86,12 @@ div.intro {
 }
 
 div.mandelbulb {
-    /*margin-left: 5%;
-    margin-right: 5%;*/
     margin-left: 2%;
     margin-right: 2%;
     margin-bottom: 2%;
     padding: 2%;
     background-color: #fff;
     font-size: 120%;
-    /*opacity: 50%;*/
-    /*border: 10px solid #fff;*/
     color: #2F0841;
     width: 40vw;
     flex-direction: column;
@@ -151,19 +149,21 @@ the links and position the close button again, so they don't overlap */
     h2 {
         font-size: 100%;
     }
-    .div#myDIV1 {
+    .div #myDIV1 {
+        display: flex;
         flex-direction: column;
     }
-    .div#myDIV2 {
+    .div #myDIV2 {
+        display: flex;
         flex-direction: column;
     }
 }
 
 @media screen and (min-width: 600px) {
-    .div#myDIV1 {
+    .div #myDIV1 {
         flex-direction: row;
     }
-    .div#myDIV2 {
+    .div #myDIV2 {
         flex-direction: row;
     }
     #ham {
@@ -193,14 +193,14 @@ the links and position the close button again, so they don't overlap */
     }
 
     .topNav a:active {
-        /*color: #60fbff !important;
-        border: 4px solid #60fbff;
+        color: #BF1261 !important;
+        border: 4px solid #fff;
     }
 
     .topNav a:hover {
-        color: #30a0fc;
-        border: 4px solid #30a0fc;
-    }
+        color: #fff;
+        border: 4px solid #fff;
+    } 
 
   
 }*/
@@ -228,7 +228,7 @@ This class makes the topnav look good on small screens (display the links vertic
 }
 
 @media only screen and (min-width: 780px) {
-    .div#myDIV1 {
+    .div #myDIV1 {
         flex-direction: column;
     }
 }
