--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@ body {
     padding: 1%;
     margin-top: 0;
     margin-bottom: 1%;
-    /*background: linear-gradient( #531D6D,#BF1639);*/
-    background-repeat: repeat;
     background-color: #531D6D;
 }
 
@@ -35,6 +33,7 @@ h2 {
 p {
     font-size: 120%;
 }
+
 img {
     display: block;
     margin-left: auto;
@@ -71,10 +70,6 @@ img {
     display: none;
 }
 
-div.flex {
-    flex-direction: column;
-}
-
 div.intro {
     font-size: 120%;
     margin-left: 2%;
@@ -102,13 +97,11 @@ nav .topNav {
     visibility: hidden !important;
 }
 
-
-
 /* When you mouse over the navigation links, change their color */
 .overlay a:hover,
 .overlay a:focus {
     color: #5eb5fb;
-    background-color: #ffffff;
+    background-color: #fff;
 }
 
 /* Position the close button (top right corner) */
@@ -116,7 +109,7 @@ nav .topNav {
     position: absolute;
     top: 20px;
     right: 45px;
-    font-size: 60px;
+    font-size: 40px;
 }
 
 .active {
@@ -127,12 +120,18 @@ nav .topNav {
 
 .flex-container {
     display: flex;
-    color: #fff;
     flex-direction: column;
     /*height: 88vh;*/
     justify-content: space-between;
 }
-
+div #myDIV1 {
+    display: flex;
+    flex-direction: column;
+}
+div #myDIV2 {
+    display: flex;
+    flex-direction: column;
+}
 
 /* When the height of the screen is less than 450 pixels, change the font-size of
 the links and position the close button again, so they don't overlap */
@@ -149,14 +148,8 @@ the links and position the close button again, so they don't overlap */
     h2 {
         font-size: 100%;
     }
-    .div #myDIV1 {
-        display: flex;
-        flex-direction: column;
-    }
-    .div #myDIV2 {
-        display: flex;
-        flex-direction: column;
-    }
+
+   
 }
 
 @media screen and (min-width: 600px) {
@@ -174,9 +167,9 @@ the links and position the close button again, so they don't overlap */
         width: 100%;
         text-align: center;
     }
-
+/*
     .topNav a {
-        visibility: visible;
+        visibility: hidden;
         background-color: transparent;
         color: white;
         font-weight: bold;
@@ -191,7 +184,7 @@ the links and position the close button again, so they don't overlap */
         margin-left: 5%;
         margin-right: 5%;
     }
-
+*/
     .topNav a:active {
         color: #BF1261 !important;
         border: 4px solid #fff;
@@ -203,7 +196,7 @@ the links and position the close button again, so they don't overlap */
     } 
 
   
-}*/
+}
 
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home").
@@ -216,6 +209,11 @@ the links and position the close button again, so they don't overlap */
     .topnav a.icon {
         display: none;
     }
+
+    @media only screen and (min-width: 600px) {
+        .div #myDIV1 {
+            flex-direction: row;
+        }
 }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon.
@@ -227,8 +225,5 @@ This class makes the topnav look good on small screens (display the links vertic
     }
 }
 
-@media only screen and (min-width: 780px) {
-    .div #myDIV1 {
-        flex-direction: column;
-    }
+
 }
