--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header {
 
 h1 {
     padding: 2%;
-    font-size: 230%;
+    font-size: 250%;
     text-align: center;
     text-transform: uppercase;
     color: #fff;
@@ -42,7 +42,7 @@ img {
     border-radius: 4px;
     /*padding: 5px;*/
     object-fit: cover;
-    max-width: 80%;
+    max-width: 95%;
     
 }
 
@@ -72,24 +72,36 @@ img {
 
 div.intro {
     font-size: 120%;
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 3%;
+    margin-right: 3%;
     margin-bottom: 2%;
     padding: 2%;
     background-color: #fff;
     color: #2F0841;
 }
 
-div.mandelbulb {
-    margin-left: 2%;
-    margin-right: 2%;
-    margin-bottom: 2%;
-    padding: 2%;
+div #myDIV1 {
+    margin-left: 1%;
+    margin-right: 1%;
+    display: flex;
+    flex-wrap: wrap;
+    /* flex-direction: row; */
+    justify-content: space-evenly;
+    align-items: stretch;
+    padding: 1%;
+}
+
+.mandelbulb {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1%;
+    padding: 1%;
     background-color: #fff;
     font-size: 120%;
     color: #2F0841;
-    width: 40vw;
-    flex-direction: column;
+    width: 39vw;
+    flex-direction: row;
+    text-align: center;
 }
 
 /*Hide nav bar for mobile devices*/
@@ -118,25 +130,7 @@ nav .topNav {
     opacity: 80%;
 }
 
-.flex-container {
-    display: flex;
-    flex-direction: column;
-    /*height: 88vh;*/
-    justify-content: space-between;
-}
-.flex-container #myDIV1 {
-    display: flex;
-    width: 80vw;
-}
 
-/*div #myDIV1 {
-    display: flex;
-    flex-direction: column;
-}
-div #myDIV2 {
-    display: flex;
-    flex-direction: column;
-}*/
 
 /* When the height of the screen is less than 450 pixels, change the font-size of
 the links and position the close button again, so they don't overlap */
@@ -157,7 +151,7 @@ the links and position the close button again, so they don't overlap */
    
 }*/
 
-@media screen and (min-width: 600px) {
+/* @media screen and (min-width: 600px) {
     .flex-container #myDIV1 {
         display: flex;
         flex-direction: row;
@@ -170,9 +164,7 @@ the links and position the close button again, so they don't overlap */
     #ham {
         display: none;
     }
-    div.mandelbulb {
-        width: 40vw;
-    }
+  
     .topNav {
         width: 100%;
         text-align: center;
@@ -205,8 +197,6 @@ the links and position the close button again, so they don't overlap */
         border: 4px solid #fff;
     } 
 
-  
-}
 
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home").
@@ -220,10 +210,10 @@ the links and position the close button again, so they don't overlap */
         display: none;
     }
 
-    @media only screen and (min-width: 600px) {
+    /* @media only screen and (min-width: 600px) {
         .div #myDIV1 {
             flex-direction: row;
-        }
+        } */
 }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon.
@@ -236,4 +226,3 @@ This class makes the topnav look good on small screens (display the links vertic
 }
 
 
-}
